# fcmaes-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  ai-context.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_biteopt_gtop_rust_100.adoc  benchmark_biteopt_gtop_rust_100_raw.tsv  benchmark_de_cma_gtop_rust_100.adoc  benchmark_de_cma_gtop_rust_100_raw.tsv  benchmark_gtop.md  benchmark_gtop_100.adoc  benchmark_gtop_100_raw.tsv  benchmark_gtop_tandem_100_metadata.json  benchmark_gtop_tandem_100_raw.tsv  run_coordinated_tandem.py
benchmarks/optimizer-comparison/: README.md  comparison.md  environment.txt  prepare_external.sh  render_report.py  run_all_external.sh  run_tandem_stress_external.py  tandem_stress_metadata.json
benchmarks/optimizer-comparison/raw/: all_results.tsv  argmin_pso.tsv  cmaes_bipop.tsv  cmaes_population.tsv  fcmaes_advanced_retry.tsv  fcmaes_biteopt_batch.tsv  fcmaes_biteopt_retry.tsv  genetic_algorithms_lshade.tsv  math_optimisation_de.tsv  tandem_stress_cmaes_bipop_cma_es_parallel_bipop.tsv
benchmarks/optimizer-comparison/sources/: Cargo.toml.reference
benchmarks/optimizer-comparison/sources/argmin-adapter/: Cargo.toml.reference
benchmarks/optimizer-comparison/sources/argmin-adapter/src/: main.rs
benchmarks/optimizer-comparison/sources/cmaes-adapter/: Cargo.toml.reference
benchmarks/optimizer-comparison/sources/cmaes-adapter/src/: main.rs
benchmarks/optimizer-comparison/sources/common/: Cargo.toml.reference
benchmarks/optimizer-comparison/sources/common/src/: lib.rs
benchmarks/optimizer-comparison/sources/fcmaes-adapter/: Cargo.toml.reference
benchmarks/optimizer-comparison/sources/fcmaes-adapter/src/: main.rs
benchmarks/optimizer-comparison/sources/genetic-algorithms-adapter/: Cargo.toml.reference
benchmarks/optimizer-comparison/sources/genetic-algorithms-adapter/src/: main.rs
benchmarks/optimizer-comparison/sources/math-optimisation-adapter/: Cargo.toml.reference
benchmarks/optimizer-comparison/sources/math-optimisation-adapter/src/: main.rs
crates/fcmaes-core/: Cargo.toml
crates/fcmaes-core/src/: biteopt.rs  cmaes.rs  crfmnes.rs  da.rs  de.rs  fitness.rs  lib.rs  mapelites.rs  mode.rs  moretry.rs  pgpe.rs  retry.rs  rng.rs
crates/fcmaes-py/: Cargo.toml
crates/fcmaes-py/python_tests/: test_bindings.py
crates/fcmaes-py/src/: acma.rs  biteopt.rs  common.rs  crfmnes.rs  da.rs  de.rs  gtop.rs  lib.rs  mapelites.rs  mode.rs  moretry.rs  pgpe.rs  retry.rs
docs/: README.md  architecture.md  development.md  examples.md  getting-started.md  optimizers.md  python-bindings.md  retry.md
examples/: Cargo.toml
examples/data/: MAZDA_NOTICE.md  UAV_NOTICE.md
examples/python/: __init__.py  test_cma.py  testfun.py
examples/src/: benchmark_gtop.rs  damp.rs  f8.rs  gtop.rs  harvesting.rs  integration.rs  jobshop.rs  lib.rs  lotka.rs  material_flow_planning.rs  mazda.rs  mazda_model.rs  problems.rs  runner.rs  scheduling.rs  tdesign.rs  trading.rs  uav.rs
ticker_cache/: trading_AAPL_2020-01-01_2026-01-01.csv  trading_GOOGL_2020-01-01_2026-01-01.csv  trading_MSFT_2020-01-01_2026-01-01.csv  trading_NVDA_2020-01-01_2026-01-01.csv
