[package]
name = "fcmaes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure-Rust core of the fcmaes optimization library."

[lib]
name = "fcmaes_core"

[dependencies]
rand = "0.8"
rand_pcg = "0.3"
rand_distr = "0.4"
rayon = "1"
nalgebra = "0.33"
libm = "0.2"
